--- a/numerical/interpolation/meson.build
+++ b/numerical/interpolation/meson.build
@@ -11,14 +11,14 @@ test_interp2_exe = executable('test_interp2', 'testinterp2.f90',
 test('Interp2D', test_interp2_exe,
   suite: 'unit')
 
-test('InterpOctave', octave,
-  args: ['--eval', 'testinterp("' + meson.build_root() / 'output2D.dat")'],
+test('Interp_octave', octave,
+  args: ['-q', '--eval', 'testinterp("' + meson.build_root() / 'output2D.dat")'],
   timeout: 10,
   workdir: meson.current_source_dir(),
   suite: 'unit')
 
 # must have .current_source_dir() for Python script
-test('InterpPython', python,
+test('Interp_python', python,
   args: [meson.current_source_dir() / 'testinterp.py', meson.build_root() / 'output2D.dat'],
   timeout: 10,
   suite: 'unit')
