--- a/io/meson.build
+++ b/io/meson.build
@@ -1,5 +1,5 @@
 io_src = files('io.f90', 'aurora.f90', 'mag.f90', 'plasma.f90', 'output.f90', 'input.f90')
 
-fsutils = library('fsutils', 'mkdir.F90', 'expanduser.f90', 'formats.f90')
+fsutils = library('fsutils', 'mkdir.F90', 'expanduser.f90')
 
 logging = library('logging', 'logging.f90')
