--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(test_formats test_formats.f90)
 target_compile_options(test_formats PRIVATE ${FFLAGS})
-target_link_libraries(test_formats PRIVATE fsutils timeutils)
+target_link_libraries(test_formats PRIVATE timeutils)
 set_target_properties(test_formats PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME DateFormats COMMAND test_formats)
 set_tests_properties(DateFormats PROPERTIES TIMEOUT 5.0
