test: skip rollover 366 day test for real32
write realbits.log from Fortran to facilitate reading raw binary data

real32/64 test interp

OK: format unit test

meson: all real32/real64 unit tests pass

collisons: don't truncate values

fix cmake interp

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,7 @@ real_bits = '-DREALBITS=' + get_option('realbits')
 use_glow = get_option('useglow')
 use_hdf = get_option('HDF')
 buildtype = get_option('buildtype')
+arith = get_option('arith')
 
 subdir('cmake')
 
