--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,3 @@
-add_executable(test_formats test_formats.f90)
-target_compile_options(test_formats PRIVATE ${FFLAGS})
-target_link_libraries(test_formats PRIVATE timeutils const)
-set_target_properties(test_formats PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-add_test(NAME DateFormats COMMAND test_formats)
-set_tests_properties(DateFormats PROPERTIES TIMEOUT 5.0
-  FIXTURES_SETUP IOfmt)
-
 find_package(MPI REQUIRED COMPONENTS Fortran)
 
 add_executable(testmpi test_mpi.f90)
@@ -19,9 +11,10 @@ set_tests_properties(MPIexist PROPERTIES
 #---------------
 
 
-add_executable(testmumps test_mumps.f90)
+add_executable(testmumps test_mumps.F90)
 target_include_directories(testmumps PRIVATE ${MUMPS_INCLUDE_DIRS})
 target_compile_options(testmumps PRIVATE ${FFLAGS})
+target_compile_definitions(testmumps PRIVATE REALBITS=${realbits})
 target_link_libraries(testmumps PRIVATE
   ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
 
