cmake: fixed typos in tests, was OK already on Meson

--- a/numerical/interpolation/CMakeLists.txt
+++ b/numerical/interpolation/CMakeLists.txt
@@ -30,9 +30,9 @@ set_tests_properties(Interp2d PROPERTIES
                      TIMEOUT 10
                      FIXTURES_SETUP GemInterp)
 
-add_test(NAME Interp3d COMMAND test_interp2 WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-set_tests_properties(Interp2D PROPERTIES
-                     TIMEOUT 10
+add_test(NAME Interp3d COMMAND test_interp3 WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+set_tests_properties(Interp3d PROPERTIES
+                     TIMEOUT 20
                      FIXTURES_SETUP GemInterp)
 
 if(PythonOK)
@@ -43,7 +43,7 @@ set_tests_properties(InterpPython PROPERTIES
                      FIXTURES_REQUIRED GemInterp)
 
 add_test(NAME Interp3Python
-  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/testinterp3.py ${CMAKE_BINARY_DIR}/output3D.dat)
+  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/testinterp3.py ${CMAKE_BINARY_DIR}/output3D.dat test_interp3)
 set_tests_properties(Interp3Python PROPERTIES
                      TIMEOUT 10
                      FIXTURES_REQUIRED GemInterp)
