--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)  # 3.12 for find_ROOT
+cmake_minimum_required(VERSION 3.13)  # 3.12 for find_ROOT, 3.13 for a lot of user functions
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING "Debug or Release" FORCE)
