meson interp3: always run exe test like Cmake
skip test instead of fail if PyGemini not installed

use array instead of data

pass Csn, C2sn1

pass C2sn2

collisions.f90: eliminate data statements with parameter arrays

cmake: need to always use TARGET_FILE to refer directly to exe's for commands

--- a/numerical/interpolation/CMakeLists.txt
+++ b/numerical/interpolation/CMakeLists.txt
@@ -43,7 +43,7 @@ set_tests_properties(InterpPython PROPERTIES
                      FIXTURES_REQUIRED GemInterp)
 
 add_test(NAME Interp3Python
-  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/testinterp3.py ${CMAKE_BINARY_DIR}/output3D.dat test_interp3)
+  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/testinterp3.py ${CMAKE_BINARY_DIR}/output3D.dat $<TARGET_FILE:test_interp3>)
 set_tests_properties(Interp3Python PROPERTIES
                      TIMEOUT 10
                      FIXTURES_REQUIRED GemInterp)
