--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,3 +1,3 @@
 test_formats = executable('test_formats', 'test_formats.f90',
-  link_with: timeutils)
+  link_with: [const, timeutils])
 test('Formats', test_formats, suite : 'unit')
