--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,19 +4,22 @@ on: [push, pull_request]
 
 jobs:
 
-  lint:
+  python:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - run: python -m pip install -e .[lint]
+    - run: python -m pip install -e .[tests,lint]
     - run: flake8
     - run: mypy .
+    - run: pytest -r a -v
+      env:
+        CI: true
 
   debug:
-    needs: [lint]
+    needs: [python]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
