--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,9 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - run: python -m pip install -e .[tests,lint]
+    - run: python -m pip install -e .[lint]
     - run: flake8
     - run: mypy .
-    - run: pytest -r a -v
-      env:
-        CI: true
 
   debug:
     needs: [python]
@@ -32,6 +29,9 @@ jobs:
     - run: meson setup build -Dsystem_blas=true --buildtype debug
       env:
         FC: gfortran
+    - run: pytest -r a -v
+      env:
+        CI: true
     - run: ninja -C build
     - run: meson test -C build -v
     - uses: actions/upload-artifact@v1
