--- a/numerical/diffusion/CMakeLists.txt
+++ b/numerical/diffusion/CMakeLists.txt
@@ -3,8 +3,7 @@ target_link_libraries(diffusion PRIVATE const grid ${LAPACK_LIBRARIES})
 target_compile_options(diffusion PRIVATE ${FFLAGS})
 target_include_directories(diffusion PRIVATE ${LAPACK_INCLUDE_DIRS})
 if(NOT LAPACK_LAPACK95_FOUND)
-  target_sources(diffusion PRIVATE ${CMAKE_SOURCE_DIR}/vendor/lapack95/gbsv.F90)
-  target_compile_definitions(diffusion PRIVATE REALBITS=${realbits})
+  target_sources(diffusion PRIVATE ${CMAKE_SOURCE_DIR}/vendor/lapack95/gbsv.f90)
 endif()
 set_target_properties(diffusion PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
