default lapack real32+real64 for polymorph w/o preprocesssor
meson: use first_supported_argument

tell lapack subproject to be real32 + real64

matlab specify file or dir

--- a/meson.build
+++ b/meson.build
@@ -3,11 +3,13 @@ project('GEMINI', 'fortran',
   default_options : ['default_library=static', 'buildtype=release',
   'libdir=gemini/lib', 'includedir=gemini/include'])
 
-real_bits = '-DREALBITS=' + get_option('realbits')
+bits = get_option('realbits')
+real_bits = '-DREALBITS=' + bits
 use_glow = get_option('useglow')
 use_hdf = get_option('HDF')
 buildtype = get_option('buildtype')
 arith = get_option('arith')
+message('arith: ' + arith)
 
 subdir('cmake')
 
