meson: explict diffusion link_with are necessary

--- a/numerical/diffusion/meson.build
+++ b/numerical/diffusion/meson.build
@@ -1,12 +1,13 @@
 parabolic = library('PDEparabolic',
   sources: ['PDEparabolic.f90', '../../vendor/lapack95/gbsv.f90'],
+  link_with: const,
   dependencies: lapack)
 
 diffusion = library('diffusion', 'diffusion.f90',
   link_with: [const, grid, parabolic])
 
 test_diffusion1D_exe = executable('test_diffusion1D', 'test_diffusion1D.f90',
-  link_with: [const, diffusion])
+  link_with: [const, diffusion, parabolic])
 test('diffusion1D', test_diffusion1D_exe,
   timeout: 5,
   suite: 'unit')
