ci: only run for what's needed python or fortran

--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -1,6 +1,14 @@
 name: ci_debug_build
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+    - "**/*.f90"
+    - "**/*.F90"
+  pull_request:
+    paths:
+    - "**/*.f90"
+    - "**/*.F90"
 
 jobs:
 
