--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -1,6 +1,14 @@
 name: ci_linux
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+    - "**/*.f90"
+    - "**/*.F90"
+  pull_request:
+    paths:
+    - "**/*.f90"
+    - "**/*.F90"
 
 jobs:
 
