default cmake glow to on

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if(NOT realbits)
 endif()
 
 option(TRACE "dump variables to disk at certain locations in program" OFF)
-option(useglow "use NCAR GLOW instead of Fang")
+option(useglow "use NCAR GLOW instead of Fang" ON)
 option(usematab "enable Matlab tests, which are slow and duplicate fast Octave tests" OFF)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules/)
